--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,3 +9,15 @@ server:
   port: 8081
   servlet:
     context-path: /api
+
+
+#logging:
+#  level:
+#    org:
+#      springframework:
+#        data:
+#          mongodb:
+#            core:
+#              MongoTemplate: DEBUG
+#      mongodb:
+#        driver: DEBUG
